# dive-into-langgraph

./: .env.example  .gitignore  1.quickstart.ipynb  10.deep_agents.ipynb  10.rag.ipynb  11.langgraph_cli.ipynb  11.web_search.ipynb  12.complex_memory.ipynb  12.deep_agents.ipynb  13.gradio_app.ipynb  13.todo_list.ipynb  14.langgraph_cli.ipynb  2.stategraph.ipynb  3.middleware.ipynb  4.human_in_the_loop.ipynb  5.memory.ipynb  6.context.ipynb  7.mcp_server.ipynb  8.supervisor.ipynb  9.parallel.ipynb  9.parallelization.ipynb  README.md  _config.yml  _config.yml.bak  create_references.sh  main.py  myst.yml  pyproject.toml  requirement.txt  requirements.txt  simple_agent.py
.github/workflows/: ci.yml  deploy-book.yml
app/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/docs/: README-en.md  ollama.md  query.md
app/mcp/: code_execution.py  role_play.py
app/mcp/mcp-server-chart/: README.md
app/prompts/: prompt_base.py  prompt_enhance.py  subagent_search.py
app/tests/: chunk.py  metadata.py  test_agent_service.py  test_app_response.py  test_device_info.py  test_docs.py  test_role_play.py  test_web_ui.py
app/tools/: tool_role.py  tool_runtime.py  tool_sci.py  tool_search.py
app/utils/: device_info.py  remove_html.py  think_result.py  tool_result.py  tool_view.py  web_ui.py
book/: home.ipynb
docs/: README-en.md  README-zh.md
examples/: docker-compose.yml  langmem.py  rag.py  router.py  store.py  time_travel.py
skills/dive-into-langgraph/: SKILL.md
skills/dive-into-langgraph/references/: 1.quickstart.md  12.deep_agents.md  13.gradio_app.md  14.langgraph_cli.md  2.stategraph.md  9.parallelization.md
skills/dive-into-langgraph/scripts/: examples.py
skills/dive-into-langgraph/scripts/tools/: tool_math.py
tests/: docker-compose.yml  test_langmem.py  test_rag.py  test_router.py  test_store.py  test_time_travel.py
