[project]
name = "gradio-agent-app"
version = "0.1.0"
description = "基于 LangChain 构建流式对话智能体"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.17",
    "fastmcp>=3.2.4",
    "gradio>=6.14.0",
    "langchain>=1.2.17",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
