[project]
name = "gradio-agent-app"
version = "0.1.0"
description = "基于 LangChain 构建流式对话智能体"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.24",
    "fastmcp>=3.4.2",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
